tuf: fix: model name was overlapping merlin logo

--- a/release/src/router/www/sysdep/FUNCTION/TUF_UI/index_style.css
+++ b/release/src/router/www/sysdep/FUNCTION/TUF_UI/index_style.css
@@ -620,7 +620,7 @@ width:122px;
 	text-align: left;
 	font-size: 32px;
 	float:left;
-	margin: 5px 0 0 -210px;
+	margin: 35px 0 0 -210px;
 	text-shadow: 3px 2px #000;
 	font-weight: bold;
 	font-family: ROG;
